CSS display mode fix for fullscreen mode (set from visibility : hidden; to display : none;

--- a/public/style/dilab.css
+++ b/public/style/dilab.css
@@ -1958,7 +1958,7 @@ body {
 
 /* Fullscreen mode */
 .fullScreen:not(:fullscreen) {
-    visibility: hidden;
+    display: none;
 }
 
 .fullScreen:not(:fullscreen) * {
